data/derived/sp14/progs/unify/prog0791.ml.out
Characters 27-31:
  let _ = fixpoint (collatz, 9001);;
                             ^^^^
Error: This expression has type int but an expression was expected of type
         string
